compiler/tests/ar/errors/pure_void_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة لاشيء(x : صحيح):
    y : تلقائي = x
نهاية

دالة الرئيسية:
    لاشيء(1)
نهاية
